[package]
name = "cgtry"
version = "0.1.0"
authors = ["kitekii <tim720719@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.19"
gfx-hal = "0.3.0"
arrayvec = "0.4"
log = "0.4.6"
simple_logger = "1.2"

[dependencies.gfx-backend-vulkan]
version = "0.3"
features = ["winit"]
optional = true

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
version = "0.3"
features = ["winit"]
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.3"
features = ["winit"]
optional = true

[build-dependencies]
glsl-to-spirv = "0.1.7"

[features]
default = ["gfx-backend-vulkan"]
metal = ["gfx-backend-metal"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]
